--- a/.github/workflows/comment-labeled.yml
+++ b/.github/workflows/comment-labeled.yml
@@ -29,7 +29,7 @@ jobs:
         run: gh pr comment ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --body "Fast-track has been requested by @${{ github.actor }}. Please 👍 to approve."
 
   commit-queue:
-    if: github.repository == 'nodejs/node' && github.event_name == 'pull_request_target' && github.event.label.name == 'commit-queue'
+    if: github.event_name == 'pull_request_target' && github.event.label.name == 'commit-queue'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
